# diego

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
assets/shaders/research/: text_rendering.frag
assets/shaders/simple/: projection.frag  shader_triangle.frag  shader_triangle.vert  simple_red_shader.frag  textured_triangle.frag  textured_triangle.vert  transform.frag  transform.vert
docs/: coding_guidelines.md  gl_groups.md  improvements.md  logging_formats.md  naming_conventions.md
research/res_macro_determination/: Cargo.toml
research/res_macro_determination/src/: main.rs
src/: core.rs  display.rs  gl.rs  lib.rs  macros.rs
src/core/: application.rs  application_context.rs  delta_time.rs  diego_runtime.rs  diego_runtime_internal.rs  event.rs  main_loop.rs  mod.rs  runtime_error.rs  runtime_info.rs  scene.rs  string_utils.rs
src/display/: types.rs  window.rs
src/geometry/: dimension.rs  mod.rs
src/gl/: buffer.rs  color.rs  debugging.rs  mod.rs  rendering.rs  setup.rs  state.rs  types.rs  vao.rs
src/glx/: mod.rs  vertex_array_object.rs  vertex_attribute.rs  vertex_attribute_type.rs  vertex_buffer_objects.rs  vertex_data_type.rs  vertex_layout.rs  vertex_layout_manager.rs  vertex_utils.rs
src/logging/: console_logger.rs  file_logger.rs  log_formatter.rs  log_manager.rs  log_queue.rs  log_target.rs  mod.rs  network_logger.rs
src/vertex/: mod.rs  textured_vertex.rs
tests/simple_window/: Cargo.toml
tests/simple_window/src/: main.rs
