[package]
name = "diego"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
winit = "0.28.7"
glutin = "0.29.1"
cgmath = "0.18.0"
once_cell = "1.19.0"
bitflags = "2.6.0"
anyhow = "1.0.89"
thiserror = "1.0.63"
lazy_static = "1.5.0"
chrono = { version = "0.4.38", features = [] }
tokio = "1.40.0"
log = "0.4.22"

[workspace]
members = [
    ".",
    "research/res_macro_determination",
    "tests/simple_window"
]
